ext/tree-sitter-luax/test/corpus/html.txt
===============
Attribute exprs
===============

link = <a href={ url("foo.txt") }>Hello!</a>

---

(source_file
  (block
    (assignstat_global
      lhs: (varname)
      rhs: (namedtag
        name: (name)
        (att
          (name)
          (prefixexp
            (functioncall
              name: (prefixexp
                (varname))
              args: (args
                (string)))))
        children: (tagchildren)))))

===============
Simple template
===============

require("common")
require("article/title")

function SimpleArticle(atts, children)
    if not atts.article then
        return <Error>article attribute is required!</Error>
    end

    return <Base>
        <Common>
            <article>
                <header>
                    <ArticleTitle article={ atts.article } />
                </header>
                {{ children }}
            </article>
        </Common>
    </Base>
end

---

(source_file
  (block
    (functioncall
      name: (prefixexp
        (varname))
      args: (args
        (string)))
    (functioncall
      name: (prefixexp
        (varname))
      args: (args
        (string)))
    (funcstat
      name: (funcname
        (name))
      par: (name)
      par: (name)
      body: (block
        (ifstat
          (unop)
          (prefixexp
            (getprop
              (prefixexp
                (varname))
              (name)))
          (block
            (retstat
              (namedtag
                name: (name)
                children: (tagchildren)))))
        (retstat
          (namedtag
            name: (name)
            children: (tagchildren
              (namedtag
                name: (name)
                children: (tagchildren
                  (namedtag
                    name: (name)
                    children: (tagchildren
                      (namedtag
                        name: (name)
                        children: (tagchildren
                          (namedtag
                            name: (name)
                            (att
                              (name)
                              (prefixexp
                                (getprop
                                  (prefixexp
                                    (varname))
                                  (name)))))))
                      (prefixexp
                        (varname)))))))))))))
